// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssessmentLeftNavHamburgerButton renders per snapshot 1`] = `
<DocumentFragment>
  <button
    aria-expanded="false"
    aria-label="Assessment - all tests and requirements list"
    class="ms-Button ms-Button--icon leftNavHamburgerButton some-class root-109"
    data-automation-id="left-nav-hamburger-button"
    data-is-focusable="true"
    type="button"
  >
    <span
      class="ms-Button-flexContainer flexContainer-110"
      data-automationid="splitbuttonprimary"
    >
      <i
        aria-hidden="true"
        class="ms-Icon root-105 ms-Button-icon icon-112"
        data-icon-name="GlobalNavButton"
      />
    </span>
  </button>
</DocumentFragment>
`;

exports[`FastPassLeftNavHamburgerButton renders per snapshot 1`] = `
<DocumentFragment>
  <button
    aria-expanded="false"
    aria-label="FastPass - all tests list"
    class="ms-Button ms-Button--icon leftNavHamburgerButton some-class root-109"
    data-automation-id="left-nav-hamburger-button"
    data-is-focusable="true"
    type="button"
  >
    <span
      class="ms-Button-flexContainer flexContainer-110"
      data-automationid="splitbuttonprimary"
    >
      <i
        aria-hidden="true"
        class="ms-Icon root-105 ms-Button-icon icon-112"
        data-icon-name="GlobalNavButton"
      />
    </span>
  </button>
</DocumentFragment>
`;

exports[`QuickAssessLeftNavHamburgerButton renders per snapshot 1`] = `
<DocumentFragment>
  <button
    aria-expanded="false"
    aria-label="Quick Assess - all tests and requirements list"
    class="ms-Button ms-Button--icon leftNavHamburgerButton some-class root-109"
    data-automation-id="left-nav-hamburger-button"
    data-is-focusable="true"
    type="button"
  >
    <span
      class="ms-Button-flexContainer flexContainer-110"
      data-automationid="splitbuttonprimary"
    >
      <i
        aria-hidden="true"
        class="ms-Icon root-105 ms-Button-icon icon-112"
        data-icon-name="GlobalNavButton"
      />
    </span>
  </button>
</DocumentFragment>
`;
